<resources>
    <string name="app_name">Blangle</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_definition">Definition</string>

    <string name="menu_txt_desc">Choix du mode</string>
    <string name="menu_txt_choice_connect">Connecte</string>
    <string name="menu_txt_choice_settings">Settings</string>
    <string name="menu_txt_choice_def">Références</string>
    <string name="menu_txt_choice_calc">Détermination</string>
    <string name="menu_txt_choice_reconnect">Reconnect</string>
    <string name="menu_txt_test_draw">test draw</string>

    <string name="menu_txt_device_status">(status)</string>
    <string name="menu_txt_bpm">(bpm)</string>
    <string name="menu_txt_angle">(angle)</string>
    <string name="menu_txt_device_info">(infos)</string>
    <string name="menu_txt_computed">(computed)</string>


    <string name="button_txt_validate">Valider</string>
    <string name="button_txt_modify">Corriger</string>

    <string name="def_title_printeuse_name">Création d\'une nouvelle imprimeuse</string>
    <string name="def_title_reference">Mesure de la référence</string>
    <string name="def_title_dev_cyl">Développement du cylindre</string>
    <string name="def_title_long_racle">Longueur de la racle</string>
    <string name="def_title_cin_choice">Choix du mouvement</string>
    <string name="def_title_cin_upper">Définition du monte baisse</string>
    <string name="def_unit_mm">mm</string>

    <string name="def_libelle_printeuse_name">Nom: </string>
    <string name="def_libelle_reference1">dA:</string>
    <string name="def_libelle_reference2">dB:</string>
    <string name="def_libelle_reference3">dC:</string>
    <string name="def_libelle_dev_cyl1">Développement:</string>
    <string name="def_libelle_long_racle">Longueur:</string>
    <string name="def_libelle_cin_upper1">Delta1:</string>
    <string name="def_libelle_cin_upper2">Taille Max:</string>
    <string name="def_libelle_cin_upper3">Delta2:</string>

    <string name="def_error_empty_input">ERREUR: Vous devez remplir chaque information</string>


    <string name="title_activity_settings">Settingsage</string>
    <string name="settings_txt_desc">Choisissez votre settings</string>
    <string name="settings_txt_discover">Découverte</string>
    <string name="settings_txt_calibration">Calibration</string>
    <string name="settings_txt_discrimination">Discrimination</string>
    <string name="settings_txt_place_sensor_flat_and_dont_move">place_sensor_flat_and_dont_move</string>
    <string name="settings_txt_move_first_one_then_second_then_third">move_first_one_then_second_then_third</string>

    <string name="title_activity_discover">Discover</string>


    <string name="title_activity_password">Security</string>
    <string name="txt_password_prompt">Enter password to enter settings:</string>
    <string name="txt_password_enter">Go</string>


    <string name="ble_not_supported">ATTENTION: this device doesn\'t support BLE!!!</string>
    <string name="bt_please_activate_bt">PLEASE: You must activate BT !!!</string>
    <string name="txt_done">fini !!!</string>
    <string name="txt_back">Retour</string>

    <string name="title_activity_draw_eye">DrawEyeActivity</string>





</resources>
