<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc" tools:context=".Menu">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/dummy_content" android:visibility="invisible"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <TextView android:id="@+id/menu_desc_test" android:layout_width="match_parent"
                android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
                android:textStyle="bold" android:textSize="50sp" android:gravity="center"
                android:text="test" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <TextView android:id="@+id/menu_desc" android:layout_width="match_parent"
                android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
                android:textStyle="bold" android:textSize="50sp" android:gravity="center"
                android:text="@string/menu_txt_desc" />

            <RadioButton android:id="@+id/menu_radio_choice_def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_txt_choice_def"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/menu_radio_choice_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_txt_choice_calc"
                android:onClick="onRadioButtonClicked"/>

        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
