<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc" tools:context=".Menu">

    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/dummy_content" android:visibility="invisible"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="80"
            android:background="#dddddd"
            android:orientation="vertical" >


            <ImageButton
                android:layout_width="800dp"
                android:layout_height="800dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:src="@drawable/icon_appli2"
                android:background="@null"
                />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="80"
            android:background="#cccccc"
            android:orientation="vertical" >

            <Space
                android:layout_width="1dp"
                android:layout_height="80dp"/>


            <TextView android:id="@+id/password_prompt" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/pagetitle"
                android:textStyle="normal" android:textSize="20sp" android:gravity="center"
                android:text="@string/txt_password_prompt" />

            <EditText android:id="@+id/password_edit" android:layout_width="100dp"
                android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/pagetitle"
                android:textStyle="normal" android:textSize="10sp" android:gravity="center"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:text="" />

            <Button
                android:id="@+id/password_button"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/txt_password_enter"
                android:background="@color/calc"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:onClick="onButtonGo" />


            <Button
                android:layout_height="wrap_content"
                android:layout_width="500dp"
                android:layout_gravity="center"
                android:text="@string/txt_back"
                android:background="@color/back"
                android:textSize="20sp"
                android:onClick="onBack" />

        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="invisible"
        >

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
